codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_attention.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 818
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  2\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
 Elpis · model gpt-5.6-sol · location /tmp/project
  Agent command center  Group: Project  g
   All 2   Needs you 1   Working 0   Ready 0   Inactive 1                 tab/shift+tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                           │ Task details
  /tmp/project  2                                     │
  › ● Repair authentication                           │ Repair authentication
    ○ Investigate parser                              │ ● Needs input
                                                      │
                                                      │ Agent: Check dependencies
                                                      │ Which dependency version should I use?
                                                      │ Open task to review.
                                                      │ Waiting for approval.
                                                      │ Waiting for your response.
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │ Model: Unknown
                                                      │
                                                      │ Prompt
                                                      │ Repair authentication
                                                      │
                                                      │
                                                      │
  ? help  esc back  ↑/↓ move  enter open  n new
