codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_embedded.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  Shared agents unavailable
  This session isn’t connected to a shared background server.


› 1. Start background server  Open `elpis agents` in another terminal afterward
  2. Return to this session

  Starting a background server will not interrupt or move this session.
  enter select · esc back
