codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_empty_narrow.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 2109
expression: rendered
---
 Elpis · model gpt-5.6-sol default · location /t
  Agent command center  Group: Project  g
   All 0   Needs you 0   Working 0           ›
  ────────────────────────────────────────────
  No tasks yet



















  ? help  esc back  ↑/↓ move  enter open  n n…
