codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_last_message.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  2\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
  Agent command center  Group: Project  g
   All 2   Needs you 1   Working 0   Ready 0   Inactive 1                      tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                       Model               │ Task details
  /tmp/project  2                                     │
    ● Repair authentication       Unknown             │ Investigate parser
  › ○ Investigate parser          provider/provider…  │ ○ Inactive
                                                      │
                                                      │ Model: provider/provider/provider/pro…
                                                      │ Reasoning: deliberatedeliberatedelibe…
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Last message
                                                      │ Found the regression in the parser.
                                                      │ Found the regression in the parser.
                                                      │ Found the regression in the parser.
                                                      │ …
                                                      │
                                                      │ Prompt
                                                      │ Investigate parser
                                                      │ …
  ? help  esc back  ↑/↓ move  enter open  n new
