codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_resume_error.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 2154
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Unable to resume session
  The session is unavailable.


› 1. Return to command center

  enter select · esc back
